// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Badge /> create badges, pills and filled badges 1`] = `
<span
  className="fd-badge"
>
  Default
</span>
`;

exports[`<Badge /> create badges, pills and filled badges 2`] = `
<span
  className="fd-badge fd-badge--success"
>
  Default
</span>
`;

exports[`<Badge /> create badges, pills and filled badges 3`] = `
<span
  className="fd-badge fd-badge--pill"
>
  Default
</span>
`;

exports[`<Badge /> create badges, pills and filled badges 4`] = `
<span
  className="fd-badge fd-badge--success fd-badge--pill"
>
  Default
</span>
`;

exports[`<Badge /> create badges, pills and filled badges 5`] = `
<span
  className="fd-badge fd-badge--filled blue"
>
  Default
</span>
`;

exports[`<Badge /> create badges, pills and filled badges 6`] = `
<span
  className="fd-badge fd-badge--success fd-badge--filled"
>
  Default
</span>
`;
